# AVNPracticeProject

./: .gitignore  Makefile  README.md
appa/: AppAController.cpp  AppAController.h  AppController.cpp  AppController.h  EmployeeInfoModel.cpp  EmployeeInfoModel.h  EmployeeListModel.cpp  EmployeeListModel.h  ProgrammingScore.qml  SortFilterProxyModel.cpp  SortFilterProxyModel.h  aaa.h  appa.pro  avnDefs.h  database.h  employeelistmodel.cpp  employeelistmodel.h  main.cpp  main.qml  mq_a.cpp  mq_a.h  qml.qrc  sortfilterproxymodel.cpp  sortfilterproxymodel.h
appc/: AppController.cpp  Makefile  ProgrammingScore.qml  appa.pro.user.84763e7  appc.pro  database.cpp  database.h  employeelistmodel.cpp  employeelistmodel.h  main.cpp  main.qml
backup/appa/: appa.pro  main.cpp  main.qml
backup/appc/: Makefile  ProgrammingScore.qml  appc.pro  main.cpp  qml.qrc
backup/common/: AppController.cpp  AppController.h  avnDefs.h  database_bk.h  employeelistmodel.cpp  employeelistmodel.h
backup/common/ipc/mq/: mq_ac.cpp  mq_ac.h  mq_b.cpp  mq_bk.cpp
backup/common/ipc/shm/: shmem.cpp
backup/rc/: database.json
backup/serviceb/: ServiceB.cpp  main_shm_test.cpp
common/: AppController.cpp  AppController.h  avnDefs.h  database.cpp  database_bk.cpp  employeelistmodel.cpp  employeelistmodel.h  sortfilterproxymodel.cpp
common/ipc/mq/: mq.cpp  mq.h  mq_ac.cpp  mq_ac.h  mq_b.cpp  mq_b.h  mq_bk.cpp  mq_bk.h
common/ipc/shm/: shmem.h
rc/: Nulo.qml  database.json
serviceb/: CMakeLists.txt  Makefile  ServiceB.cpp  ServiceB.h  database.cpp  database.h  main.cpp  main_mq_a_test.cpp  main_mq_b_test.cpp  main_mq_c_test.cpp  main_shm_test.cpp  mq_b.cpp  mq_b.h
serviceb/ipc/mq/: mq.cpp  mq.h
serviceb/ipc/shm/: shmem.cpp
serviceb/service/: CMakeLists.txt  database.h  main.cpp  shm_server.c
